infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: api.vwanu.dev
      http:
        paths:
          - path: /api/v1/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/address/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: address-srv
                port:
                  number: 3000
          - path: /api/v1/mailer/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mailer-srv
                port:
                  number: 3000
# k apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.0-beta.0/deploy/static/provider/cloud/deploy.yaml
